--- a/references.bib
+++ b/references.bib
@@ -32,3 +32,18 @@
 	url = {http://dx.doi.org/10.1007/s00267-012-9972-9},
 	langid = {en}
 }
+
+@article{Tiihonen2020,
+	title = {Commentary on Robert Whitaker's viewpoint},
+	author = {Tiihonen, Jari and Taipale, Heidi and Correll, Christoph U.},
+	year = {2020},
+	month = {10},
+	date = {2020-10-26},
+	journal = {Psychological Medicine},
+	pages = {2653--2654},
+	volume = {50},
+	number = {16},
+	doi = {10.1017/s0033291720003591},
+	url = {http://dx.doi.org/10.1017/S0033291720003591},
+	langid = {en}
+}
