--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,3 @@
 # Preface {.unnumbered}
 
-This is a Quarto book.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
-
-```{r}
-1 + 1
-```
-
-Otra referencia [@Pérez-Maqueo2013]
+Este es el documento de registro de avances del proyecto **Estimación de la integridad ecosistémica de las costas arenosas mexicanas a través de técnicas de aprendizaje de máquina**
