--- a/capitulos/references.bib
+++ b/capitulos/references.bib
@@ -13,3 +13,54 @@
 	url = {http://dx.doi.org/10.1016/s0272-2712(02)00022-7},
 	langid = {en}
 }
+
+@article{knuth84,
+  author = {Knuth, Donald E.},
+  title = {Literate Programming},
+  year = {1984},
+  issue_date = {May 1984},
+  publisher = {Oxford University Press, Inc.},
+  address = {USA},
+  volume = {27},
+  number = {2},
+  issn = {0010-4620},
+  url = {https://doi.org/10.1093/comjnl/27.2.97},
+  doi = {10.1093/comjnl/27.2.97},
+  journal = {Comput. J.},
+  month = may,
+  pages = {97–111},
+  numpages = {15}
+}
+
+
+
+@article{Pérez-Maqueo2013,
+	title = {Using Four Capitals to Assess Watershed Sustainability},
+	author = {{Pérez-Maqueo}, Octavio and Martinez, M. Luisa and {Vázquez}, Gabriela and Equihua, Miguel},
+	year = {2012},
+	month = {11},
+	date = {2012-11-06},
+	journal = {Environmental Management},
+	pages = {679--693},
+	volume = {51},
+	number = {3},
+	doi = {10.1007/s00267-012-9972-9},
+	url = {http://dx.doi.org/10.1007/s00267-012-9972-9},
+	langid = {en}
+}
+
+@article{Tiihonen2020,
+	title = {Commentary on Robert Whitaker's viewpoint},
+	author = {Tiihonen, Jari and Taipale, Heidi and Correll, Christoph U.},
+	year = {2020},
+	month = {10},
+	date = {2020-10-26},
+	journal = {Psychological Medicine},
+	pages = {2653--2654},
+	volume = {50},
+	number = {16},
+	doi = {10.1017/s0033291720003591},
+	url = {http://dx.doi.org/10.1017/S0033291720003591},
+	langid = {en}
+}
+
