--- a/capitulos/miro-costas.qmd
+++ b/capitulos/miro-costas.qmd
@@ -28,11 +28,10 @@ actividades <- actividades[str_detect(actividades, " {5,}", negate = TRUE)]
 
 La reunión de inició del proyecto: *`r texto[1]`*, se realizó del `r str_remove(texto[5], "Fechas: ")`.
 
-::: {.content-hidden when-format="pdf"}
-
 ```{r}
 #| label: lista_actividades
 #| echo: false
+#| results: asis
 
 library(flextable)
 
@@ -46,21 +45,26 @@ for(a in actividades)
       plan <- bind_rows(plan, c(tema = tema_a, subtema = str_split(a, ", | y ")))
     }
 
-plan_txt <- ""
+plan_txt <- "\n"
 for (p in (1:length(plan$subtema)))
 {
   if (plan$subtema[p] == "")
   {
-    plan_txt <- paste0(plan_txt, plan$tema[p], "\n")
+    if (str_detect(plan$tema[p], "Día"))
+        {
+          plan_txt <- paste0(plan_txt, "\n### ", plan$tema[p], "\n\n")
+          
+    } else {
+          plan_txt <- paste0(plan_txt, "\n**", plan$tema[p], "**", "\n\n")
+    }
   } else {
-    plan_txt <- paste0(plan_txt, "      ", plan$subtema[p], "\n")
+    plan_txt <- paste0(plan_txt, "+ ", str_to_sentence(plan$subtema[p]), "\n")
   }
 }
 
 cat(plan_txt)
 ```
 
-:::
 
 ## Miro
 
@@ -68,46 +72,16 @@ cat(plan_txt)
 
 ::: {layout-ncol="2"}
 La propuesta que hacemos es usar *Miro* como plataforma de debate y construcción de consenso. 
-Buscamos así aproximarnos a la estructura causal que vincula las variables que determinan el rendimiento y la sustentabilidad (social, económica y ambiental). Una vez resuelta esta etapa, es necesario transferir lo acordado en *Miro* a plataformas de análisis estadístico. Aquí, nos propusimos trasladar los resultados de *Miro* a *R*. Al hacer esto las posibilidades analíticas se potencian muy ampliamente. Como veremos, podemos recurrir a `dagitty` o incluso utilizar *Python* y *Netica*. Para hacer esto optamos por la ruta de acceso commputacional [a través de la interfase "REST"](https://developers.miro.com/reference). Esto implica usar la biblioteca `httr` en *R*.
+Buscamos así aproximarnos a la estructura causal que vincula las variables que determinan el rendimiento y la sustentabilidad (social, económica y ambiental). Una vez resuelta esta etapa, es necesario transferir lo acordado en *Miro* a plataformas de análisis estadístico. Aquí, nos propusimos trasladar los resultados de *Miro* a *R*. Al hacer esto las posibilidades analíticas se potencian muy ampliamente. Como veremos, podemos recurrir a `dagitty` o incluso utilizar *Python* y *Netica*. 
 
 ![](Images/colaboración.png)
 :::
 
-Hemos preparado una biblioteca con las rutinas que se describen aquí, para que las puedan usar según se requiera. Para descargarlas usa el botón que sigue.
-
-\
-
-::: {.content-hidden when-format="pdf"}
-
-```{r}
-#| label: biblio_miro2Bayes
-#| echo: false
-#| message: false
-#| warning: false
-#| include: true
-
-downloadthis::download_link(
-      link = "https://github.com/equihuam/miro2bayesNet",
-      button_label = "Descarga la biblioteca miro2bayes",
-      button_type = "info",
-      has_icon = TRUE,
-      icon = "fa fa-save",
-      self_contained = FALSE)
-
-```
-
-:::
-
-\
-
-### Acceder a **Miro**
-
-En preparación para interactuar con **Miro** se requiere tener permisos de acceso de acuerdo con las [especificaciones que se dan aquí](https://developers.miro.com/reference/scopes). Estas credenciales hay que evitar distribuirlas. Por consiguiente, para hacerlo hemos recurrido a la biblioteca `keyring` para mantenerlas confidenciales. Esta biblioteca permite utilizar el sistema de seguridad del equipo para la gestión de las claves. Para dar de alta una llave utilicé en este caso la instrucción siguiente, necesitarás dos identificadores de tu preferencia que deberán ir entrecomillados:
+Hemos preparado una biblioteca con las rutinas necesarias para transferir lo trabajado en **Miro** (básicamente desarrollo conceptual) a **R**  en donde se podrá  continuar con el desarrollo formal del modelo según se requiera, cualitativa y cuantitativamente. Para instalarla y usarla hay que seguir las [indicaciones que se describen aquí](https://github.com/equihuam/miro2bayesNet). Consideren que para usarla habrá que hacer algunas preparaciones para interactuar con **Miro**. Se trata básicamente de tener los permisos de acceso. Habrá que obtener credenciales en la forma de un *token*, el cual hay que evitar distribuir. Por lo tanto, para operar hemos recurrido a la biblioteca `keyring` para mantenerlas confidenciales. Esta biblioteca permite utilizar el sistema de seguridad del equipo para la gestión de las claves. Para dar de alta una llave utiliza la instrucción de registro `key_set`, necesitarás dos identificadores de tu preferencia que deberán ir entrecomillados:
 
 `key_set(service = "[referencia de tu preferencia]", username = "[identificador de tu gusto]")`
 
-Una vez registrada en el equipo la llave, queda lista para su uso en cualquier momento en esa máquina .
-
+Una vez registrada en el equipo la llave, queda lista para su uso en cualquier momento en esa máquina y deberás proporcionar los dos identificadores que elegiste para operar las *ingesta* a **R**, del modelo hecho en **Miro**.
 
 ```{r} 
 #| label: Miro_usuario
