ya con equipo y proyecto

--- a/capitulos/taller.qmd
+++ b/capitulos/taller.qmd
@@ -1,8 +1,9 @@
----
+------------------------------------------------------------------------
 
-bibliography: references.bib
----
+## bibliography: references.bib
 
 # Taller
 
-[@Harper2002]
+[@Lithgow2020]
+
+\-\--
