--- a/capitulos/taller.qmd
+++ b/capitulos/taller.qmd
@@ -1,9 +1,6 @@
-------------------------------------------------------------------------
 
 ## bibliography: references.bib
 
 # Taller
 
-[@Lithgow2020]
-
-\-\--
+[@Harper2022]
