--- a/capitulos/taller.qmd
+++ b/capitulos/taller.qmd
@@ -10,11 +10,11 @@ Presentar la visión integral del proyecto, su origen, fundamentos teórico-meto
 
 **Objetivos particulares:**
 
-1.             Presentar el proyecto, sus etapas, los productos comprometidos y tiempos estimados.
+1. Presentar el proyecto, sus etapas, los productos comprometidos y tiempos estimados.
 
-2.             Presentar las bases teórico-metodológicas del proyecto (redes bayesianas), así como los fundamentos de ciencia abierta (FAIR).
+2.Presentar las bases teórico-metodológicas del proyecto (redes bayesianas), así como los fundamentos de ciencia abierta (FAIR).
 
-3.             Identificar posibles variables a utilizar en el modelaje del proyecto, así como las fuentes de datos e información relevante en dos escalas (para el nivel nacional y un caso de estudio potencial a detalle en la Península de Yucatán).
+3.Identificar posibles variables a utilizar en el modelaje del proyecto, así como las fuentes de datos e información relevante en dos escalas (para el nivel nacional y un caso de estudio potencial a detalle en la Península de Yucatán).
 
 **Descripción de las actividades**
 
@@ -26,59 +26,59 @@ A continuación, se presentan la descripción del desarrollo de las actividades 
 
 **Día 1.**
 
-**1.    Bienvenida y presentación**
+**1. Bienvenida y presentación**
 
 Al inicio del taller, el Dr. Octavio Pérez Maqueo dio una breve bienvenida al taller e informó que cada día se iba a pasar una lista de asistencia; además, se le pidió a cada persona señalar si brindaban su consentimiento libre e informado para el uso de imagen e información considerando la siguiente leyenda: *"Al marcar esta celda, usted da el consentimiento para que el proyecto 'Estimación de la integridad ecosistémica de las costas arenosas mexicanas a través de técnicas de aprendizaje de máquina (CF-2023-G-1497)' haga uso de materiales (fotos/videos) con su imagen, así como de la información derivada de los días de taller. Ninguna información privada o sensible será utilizada ni compartida fuera del marco del proyecto. Muchas gracias."* (Ver listas en el anexo 1)
 
 Posteriormente a la información de la lista y consentimiento, se invitó a cada participante a presentarse brevemente con su nombre e institución.
 
-**2.      Presentación del contexto y origen del proyecto**
+**2. Presentación del contexto y origen del proyecto**
 
 El Dr. Pérez Maqueo desarrolló una presentación en torno a la pregunta ¿por qué creemos que es necesario un proyecto como este? Para ello, la exposición contó con los siguientes componentes:
 
 Visión integral
 
-o       Caso particular de las costas
+- Caso particular de las costas
 
-o       Desarrollo de habilidades
+- Desarrollo de habilidades
 
 ¿Cómo sugerimos hacerlo?
 
-o       Co-construcción
+- Co-construcción
 
-o       Ciencia Abierta y principios FAIR
+- Ciencia Abierta y principios FAIR
 
-o       Análisis con base en propuesta del SEEA EA
+- Análisis con base en propuesta del SEEA EA
 
-o       Flujos de trabajo (pipelines)
+- Flujos de trabajo (pipelines)
 
 En esta primera presentación se destacaron algunos argumentos de la necesidad que dio origen al proyecto:
 
-o   Fortalecer iniciativas nacionales e internacionales que vemos como una alternativa viable hacia la sustentabilidad.
+- Fortalecer iniciativas nacionales e internacionales que vemos como una alternativa viable hacia la sustentabilidad.
 
-o   Desarrollar metodologías que nos permitan a nosotros u otras personas rehacer mañana el análisis que hicimos hoy.
+- Desarrollar metodologías que nos permitan a nosotros u otras personas rehacer mañana el análisis que hicimos hoy.
 
-o   Aprender sobre nuevas formas de análisis dada la capacidad de datos y cómputo actuales.
+- Aprender sobre nuevas formas de análisis dada la capacidad de datos y cómputo actuales.
 
-o   Analizar a los socioecosistemas de manera integral incorporando las dependencias espaciales que caracteriza a estos sistemas.
+- Analizar a los socioecosistemas de manera integral incorporando las dependencias espaciales que caracteriza a estos sistemas.
 
-o   Implementar los resultados del proyecto en la toma de decisiones.
+- Implementar los resultados del proyecto en la toma de decisiones.
 
 Las presentaciones están disponibles en el blog donde se subirán los materiales del proyecto: 
 
 <https://sw-costas-arenosas.netlify.app/presentaciones#category=presentaci%C3%B3n>
 
-**3.      Descripción del proyecto y marco teórico**
+**3. Descripción del proyecto y marco teórico**
 
 En la segunda parte de la mañana del día 1, se expusieron las generalidades del proyecto, el marco conceptual, los compromisos establecidos para las tres etapas del proyecto, presupuesto, avances y tiempos estimados.
 
 El objetivo principal del proyecto es "integrar indicadores bióticos y abióticos en un índice de integridad ecosistémica, a través de un modelo causal bajo una aproximación de Inteligencia Artificial Interpretable (IAI)":
 
-o  Nacional
+- Nacional
 
-o  Incorporar la complejidad asociada a ecosistemas costeros
+- Incorporar la complejidad asociada a ecosistemas costeros
 
-o  Aprendizaje Automático Interpretable (redes bayesianas)
+- Aprendizaje Automático Interpretable (redes bayesianas)
 
 El resultado principal es proponer una metodología para analizar la integridad ecosistémica de las costas arenosas de México, con el fin de incorporarla a las cuentas nacionales de ecosistemas y promover su uso en distintos instrumentos de política pública.
 
@@ -90,43 +90,43 @@ En la presentación se destacó la importancia de hacer la ciencia reproducible,
 
 De esta manera, las/os participantes reconocieron las bases del proyecto y su propuesta de desarrollo. Al terminar la exposición hubo un breve espacio para algunas dudas o inquietudes, incluyendo a las personas que atendieron en línea.
 
-**4.      Presentación de la estrategia metodológica**
+**4. Presentación de la estrategia metodológica**
 
 La siguiente presentación buscó que el grupo cuente con la información base de la estrategia metodológica del taller, la cual sirvió también para realizar el ejercicio planeado para el día 2 de trabajo, en el cual se identificaron las variables y fuentes de información. La presentación contó con los siguientes elementos:
 
-o       De lo conceptual a lo analítico (de Miro a Nética)
+- De lo conceptual a lo analítico (de Miro a Nética)
 
-o       Enfoque causal y probabilístico
+- Enfoque causal y probabilístico
 
-o       Documentación y gestión de datos
+- Documentación y gestión de datos
 
 A lo largo del día se plantearon diversas inquietudes, por ejemplo:
 
-o       Definir las fronteras del área de estudio.
+- Definir las fronteras del área de estudio.
 
-o       Definir si el grupo estaba en posibilidades de un estudio de caso a profundidad en la Península d Yucatán.
+- Definir si el grupo estaba en posibilidades de un estudio de caso a profundidad en la Península de Yucatán.
 
-o       Considerar si se considerará información de la cuenca a nivel superficial y/o a los acuíferos.
+- Considerar si se considerará información de la cuenca a nivel superficial y/o a los acuíferos.
 
-o       Definir la temporalidad, qué años y si se toman las dos temporadas para las costas.
+- Definir la temporalidad, qué años y si se toman las dos temporadas para las costas.
 
-o·       Necesidad de llegar a las resoluciones espaciales para la información a nivel nacional y para un estudio de caso.
+- Necesidad de llegar a las resoluciones espaciales para la información a nivel nacional y para un estudio de caso.
 
 Además, se enlistó la información que podría ser relevante y algunas fuentes de datos que debían retomarse:
 
-o  Las imágenes que se usaron para el inventario de humedales, que tiene imágenes desde el 75 u 83 y del 2005-2006. Consultar a CONABIO.
+- Las imágenes que se usaron para el inventario de humedales, que tiene imágenes desde el 75 u 83 y del 2005-2006. Consultar a CONABIO.
 
-o  Las imágenes de los vuelos que tiene INEGI y/o SEMARNAT.
+- Las imágenes de los vuelos que tiene INEGI y/o SEMARNAT.
 
-o  Biblioteca de imágenes de ICA, donde incluso se cuenta con vuelos de los años sesenta (aerofotos).
+- Biblioteca de imágenes de ICA, donde incluso se cuenta con vuelos de los años sesenta (aerofotos).
 
-o  Acervo de la compañía mexicana de aerofoto, que se había depositado en el Instituto de Geografía-UNAM, sin embargo, como no estaban cuidados los rollos, ICA se los llevo. Los tiene la Fundación ICA.
+- Acervo de la compañía mexicana de aerofoto, que se había depositado en el Instituto de Geografía-UNAM, sin embargo, como no estaban cuidados los rollos, ICA se los llevo. Los tiene la Fundación ICA.
 
-o  Las fotografías aéreas más antiguas que tomaron los EE. UU., las cuales están escaneadas. El equipo de Rodolfo Silva tiene acceso a esta información. Una parte ya está digitalizada, pero no toda está organizada, hay mucho trabajo pendiente.
+- Las fotografías aéreas más antiguas que tomaron los EE. UU., las cuales están escaneadas. El equipo de Rodolfo Silva tiene acceso a esta información. Una parte ya está digitalizada, pero no toda está organizada, hay mucho trabajo pendiente.
 
-o  Información de la CFE.
+- Información de la CFE.
 
-o  Las cartas geológico-mineras de todo el país. Los tiene el servicio geológico mexicano
+- Las cartas geológico-mineras de todo el país. Los tiene el servicio geológico mexicano
 
 El equipo facilitador tomó notas cada día de trabajo de estos puntos para llegar a definiciones en una tabla de acuerdos al final del taller (ver anexo 3).
 
@@ -134,27 +134,28 @@ Al final del día 1, se dio un espacio en plenaria de cierre de la jornada de tr
 
 **Día 2**
 
-**5.      Presentación del tema gestión de datos y presentación de variables**
+**5. Presentación del tema gestión de datos y presentación de variables**
 
 Al inicio del día 2, se continuó con el tema de gestión de datos y se presentaron las temáticas de variables existentes y nuevas variables, así como las sugerencias para documentar y gestionar datos en el marco del proyecto.
 
 Posteriormente se brindó un ejemplo de variables y sus interacciones. De esta manera, el grupo conoció la metodología específica para definir variables e interacciones.
 
-**6.      Ejercicio participativo de identificación de variables**
+**6. Ejercicio participativo de identificación de variables**
 
-a)      Mecánica del ejercicio:
+a) Mecánica del ejercicio:
 
 Una vez que se introdujo al grupo de trabajo a la metodología de identificación de variables, se realizó un ejercicio donde el grupo participó a través de notas digitales tipo post-it en un pizarrón digital en la plataforma Miro (ver Fig. 1). Para esto, el equipo facilitador había preparado previamente el pizarrón de trabajo, se propusieron variables que ya se habían identificado, además de presentar el ejemplo de un caso que se desarrolló en un proyecto previo.
+![](images/Taller_figura_1.png)
 
-4.             Definir los parámetros técnicos para el intercambio de información entre el equipo de trabajo (resolución, formato, metadatos, etc.).
+4. Definir los parámetros técnicos para el intercambio de información entre el equipo de trabajo (resolución, formato, metadatos, etc.).
 
 **Resultados generados:**
 
-1.                     Mural digital con la lista de variables potenciales identificada por el grupo de trabajo, la cual incluye fuente de datos, la escala de información y la persona que propuso la variable y que podría gestionar el acceso a la información.
+1. Mural digital con la lista de variables potenciales identificada por el grupo de trabajo, la cual incluye fuente de datos, la escala de información y la persona que propuso la variable y que podría gestionar el acceso a la información.
 
-2.                     Lista de fuentes de información adicionales que puedan servir como insumo para el modelaje.
+2. Lista de fuentes de información adicionales que puedan servir como insumo para el modelaje.
 
-3.                     Tabla de acuerdos con tareas y responsables para la siguiente fase del proyecto.
+3. Tabla de acuerdos con tareas y responsables para la siguiente fase del proyecto.
 
 ## bibliography: references.bib
 
